force-app/main/default/objects/Construction_Stage__c/fields/Milestone_Status__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Status__c</fullName>
    <label>Milestone Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ongoing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>