force-app/main/default/objects/Construction_Stage__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <formula>Tower__r.Project__r.Name</formula>
    <label>Project</label>
    <type>Text</type>
</CustomField>