force-app/main/default/objects/Construction_Stage__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <referenceTo>Tower__c</referenceTo>
    <relationshipLabel>Construction Stage</relationshipLabel>
    <relationshipName>Construction_Stage</relationshipName>
    <type>Lookup</type>
</CustomField>