force-app/main/default/objects/Construction_Stage__c/fields/Unit_Wise_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Unit_Wise_Milestone__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Unit Wise Milestone</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>